--- a/PersonalWebSite.Front/Components/Cv/CvTitle.razor
+++ b/PersonalWebSite.Front/Components/Cv/CvTitle.razor
@@ -1,5 +1,5 @@
 ﻿<div class="name">
-    Julien Gourdon
+    Julien Gourdon - Freelance
 </div>
 <div class="role">
     Développeur .NET/Web Fullstack
