--- a/PersonalWebSite.Front/Pages/PageCv.razor
+++ b/PersonalWebSite.Front/Pages/PageCv.razor
@@ -43,7 +43,7 @@
                     </div>
                     
                     @*<PersonalWebSite.Front.Components.Cv.CvSkills />*@
-                    <PersonalWebSite.Front.Components.Cv.CvExperience />
+                    <PersonalWebSite.Front.Components.Cv.CvExperience IncludeFirst="true" IncludeOthers="true" />
                 </div>
             </div>
         </div>
