--- a/PersonalWebSite.Front/wwwroot/css/site.scss
+++ b/PersonalWebSite.Front/wwwroot/css/site.scss
@@ -153,8 +153,8 @@ body {
                 }
 
                 &.printable-content {
-                    width: 210mm;
-                    height: 297mm;
+                    /*width: 210mm;
+                    height: 297mm;*/
 
 
                     .left-part {
@@ -186,6 +186,10 @@ body {
                         padding: 4px;
                         flex-direction: column;
                         flex: 1 1 0;
+                    }
+
+                    .timeline__event__description{
+                        font-size: 12px;
                     }
                 }
 
@@ -262,14 +266,14 @@ body {
                 .name {
                     font-size: 28px;
                     padding-top: 3px;
-                    text-align: center;
+                    /*text-align: center;*/
                     color: var(--yellow);
                 }
 
                 .role {
                     margin-top: 4px;
                     font-size: 22px;
-                    text-align: center;
+                    /*text-align: center;*/
                     margin-bottom: 4px;
                 }
 
@@ -355,7 +359,7 @@ body {
                             }
                         }
 
-                        .school-timeline-ets{
+                        .school-timeline-ets {
                             font-size: 13px;
                             font-style: italic;
                         }
@@ -876,6 +880,10 @@ h2 {
         &:nth-child(2n + 1) {
             flex-direction: row-reverse;
 
+            .timeline__event__header {
+                flex-direction: row-reverse;
+            }
+
             .timeline__event__date {
                 border-radius: 0 $bdrs $bdrs 0;
             }
@@ -932,6 +940,10 @@ h2 {
             border-radius: 0 $bdrs $bdrs 0;
         }
 
+        .timeline__event__header {
+            display: flex;
+        }
+
         &__date {
             color: $color2;
             font-size: 1.5rem;
@@ -947,13 +959,27 @@ h2 {
             text-align: center;
 
             .timeline__event__date__lib {
-                border-bottom: 1px solid $color2;
+                border-bottom: 1px solid var(--white);
+                flex: 1;
+                align-self: stretch;
+                height: auto;
+                justify-content: space-around;
+                display: flex;
+                align-items: center;
             }
 
             .timeline__event__date__img {
                 flex-grow: 1;
                 display: flex;
+                flex-direction: column;
+                align-self: stretch;
+                padding: 4px;
 
+                .timeline__event__date__img__block {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-around;
+                }
             }
         }
 
@@ -1103,8 +1129,7 @@ h2 {
         }
     }
 }
-
-@media (max-width: 786px) {
+@include media-breakpoint-down(lg) {
     .timeline__event {
         flex-direction: column;
         align-self: center;
@@ -1118,10 +1143,49 @@ h2 {
             width: 100%;
             margin: 0;
             box-shadow: none;
+            flex: 1;
+            align-self: stretch;
+            height: auto;
 
             &:before,
             &:after {
                 display: none;
+            }
+        }
+
+        .timeline__event__header {
+            flex-direction: row !important;
+
+            .timeline__event__date {
+                flex-grow: 1;
+                display: flex;
+                flex-direction: row;
+
+                @include media-breakpoint-down(md) {
+                    flex-direction: column;
+                }
+
+                .timeline__event__date__lib {
+                    border-bottom: 0;
+                    border-right: 1px solid var(--white);
+                    padding-right: 10px;
+
+                    @include media-breakpoint-down(md) {
+                        border-bottom: 1px solid var(--white);
+                        border-right: 0;
+                        padding-right: 0px;
+                    }
+                }
+
+
+
+                .timeline__event__date__img {
+                    margin-left: 10px;
+
+                    @include media-breakpoint-down(md) {
+                        margin-left: 0px;
+                    }
+                }
             }
         }
 
@@ -1145,6 +1209,9 @@ h2 {
             }
         }
     }
+}
+@media (max-width: 786px) {
+    
 }
 
 @keyframes fillLeft {
