--- a/PersonalWebSite.Front/Components/Cv/CvGeneralInfo.razor
+++ b/PersonalWebSite.Front/Components/Cv/CvGeneralInfo.razor
@@ -14,7 +14,7 @@
     @*<a class="skype text-nowrap" href="skype:julien.gourdon?add"><i class="fab fa-skype"></i>&nbsp;julien.gourdon</a>*@
     @if (WithCvDownload)
     {
-        <a class="d-inline d-lg-none ms-1" title="Exporter en PDF" style="white-space: nowrap" target="_blank" href="@($"/CV/cv_julien_gourdon_{LanguageService.GetCurrentLanguage().Localization}.pdf")"><i class="fa-solid fa-file-pdf"></i>&nbsp;@L["Download"]</a>
+        <a class="ms-1" title="Exporter en PDF" style="white-space: nowrap" target="_blank" href="@($"/CV/cv_julien_gourdon_{LanguageService.GetCurrentLanguage().Localization}.pdf")"><i class="fa-solid fa-file-pdf"></i>&nbsp;@L["Download"]</a>
     }
     @*<div class="info-photo">
 
