--- a/PersonalWebSite.Front/Components/Cv/CvGraduate.razor
+++ b/PersonalWebSite.Front/Components/Cv/CvGraduate.razor
@@ -3,7 +3,7 @@
 <div class="cv-title">
     <i class="fas fa-graduation-cap"></i>&nbsp;@(L["CvDiplome"])
 </div>
-<div class="diploma">
+<div class="diploma page-break">
     <div class="school-timeline">
         <div class="school-timeline-item">
             <span class="text-nowrap">2012 : @(L["CvMaster"])</span>
