--- a/PersonalWebSite.Front/Pages/PageCvPrint.razor
+++ b/PersonalWebSite.Front/Pages/PageCvPrint.razor
@@ -11,6 +11,8 @@
             <PersonalWebSite.Front.Components.Cv.CvAboutMe />
             <PersonalWebSite.Front.Components.Cv.CvLang />
             <PersonalWebSite.Front.Components.Cv.CvGraduate />
+            <div class="pagebreak"> </div>
+            <PersonalWebSite.Front.Components.Cv.CvSkills />
             @*<PersonalWebSite.Front.Components.Cv.CvHobbies />*@
         </div>
         <div class="right-part">
