--- a/PersonalWebSite.Front/Pages/PageCv.razor
+++ b/PersonalWebSite.Front/Pages/PageCv.razor
@@ -31,16 +31,17 @@
     <div class="cv-content display-content">
         <div class="container-fluid d-flex flex-grow-1">
             <div class="row flex-grow-1">
-                <div class="col-lg-2 left-part primary-background ">
+                <div class="col-12 col-lg-3 col-xxl-2 left-part primary-background ">
                     <PersonalWebSite.Front.Components.Cv.CvGeneralInfo WithCvDownload="true" />
                     <PersonalWebSite.Front.Components.Cv.CvAboutMe />
                     <PersonalWebSite.Front.Components.Cv.CvLang />
                     <PersonalWebSite.Front.Components.Cv.CvGraduate />
+                    <PersonalWebSite.Front.Components.Cv.CvSkills />
                 </div>
-                <div class="col-lg-10 right-part">
-                    <div class="d-none d-lg-flex justify-content-end">
+                <div class="col-12 col-lg-9 col-xxl-10 right-part">
+                   @*  <div class="d-none d-lg-flex justify-content-end">
                         <a title="Exporter en PDF" style="white-space: nowrap;" target="_blank" href="@($"/CV/cv_julien_gourdon_{LanguageService.GetCurrentLanguage().Localization}.pdf")"><i class="fa-solid fa-file-pdf"></i>&nbsp;Télécharger</a>
-                    </div>
+                    </div> *@
                     
                     @*<PersonalWebSite.Front.Components.Cv.CvSkills />*@
                     <PersonalWebSite.Front.Components.Cv.CvExperience IncludeFirst="true" IncludeOthers="true" />
