--- a/PersonalWebSite.Front/wwwroot/css/site.scss
+++ b/PersonalWebSite.Front/wwwroot/css/site.scss
@@ -24,6 +24,17 @@ body {
     display: flex;
     flex-direction: column;
 
+    ul {
+        padding-left: 1rem;
+    }
+
+    @media print {
+        .pagebreak {
+            clear: both;
+            page-break-after: always;
+        }
+    }
+
     app {
         min-height: 0;
         display: flex;
@@ -158,7 +169,7 @@ body {
 
 
                     .left-part {
-                        display: flex;
+                        /*display: flex;*/
                         padding: 8px;
                         flex-direction: column;
                         max-width: 18rem;
@@ -188,8 +199,12 @@ body {
                         flex: 1 1 0;
                     }
 
-                    .timeline__event__description{
-                        font-size: 12px;
+                    .timeline__event__main__title {
+                        font-size: 1.3rem;
+                    }
+
+                    .timeline__event__description {
+                        font-size: 11px;
                     }
                 }
 
@@ -365,27 +380,24 @@ body {
                         }
                     }
                 }
-
-
-
-                .skills-containers {
+                /*.skills-containers {
                     display: flex;
-                    flex: 1 1 0;
-                    /* left: 0; */
-                    /* right: 0; */
-                    /* margin-left: auto; */
-                    /* margin-right: auto; */
-                    flex-grow: 0.7;
+                    flex: 1 1 0;*/
+                /* left: 0; */
+                /* right: 0; */
+                /* margin-left: auto; */
+                /* margin-right: auto; */
+                /*flex-grow: 0.7;
                     flex-direction: column;
                     margin: 4px;
                     position: relative;
                     border: 4px solid var(--third-color);
 
                     .skills-title {
-                        position: absolute;
-                        /* left: 50%; */
-                        /* top: 50%; */
-                        margin: auto;
+                        position: absolute;*/
+                /* left: 50%; */
+                /* top: 50%; */
+                /*margin: auto;
                         left: 0;
                         top: 0;
                         right: 0;
@@ -427,6 +439,15 @@ body {
                                 }
                             }
                         }
+                    }
+                }*/
+                .skills-container {
+                    /*display: flex;
+                    flex-wrap: wrap;
+                    justify-content: space-between;*/
+
+                    img {
+                        margin: 5px;
                     }
                 }
 
@@ -818,6 +839,7 @@ body {
     a{
         text-decoration: none;
     }
+
 }
 
 
@@ -867,12 +889,14 @@ h2 {
     flex-direction: column;
     /*margin: $margin auto;*/
     position: relative;
+    padding-top: 5px;
 
     &__event {
         margin-bottom: $spacing;
         position: relative;
         display: flex;
-        margin: $spacing 0;
+        /*margin: $spacing 0;*/
+        margin-bottom: $spacing;
         border-radius: $bdrs;
         align-self: center;
         /* width: 100vw;*/
@@ -923,28 +947,55 @@ h2 {
             }
         }
 
-        &__title {
-            font-size: 1.2rem;
-            line-height: 1.4;
-            text-transform: uppercase;
-            font-weight: 600;
-            color: $color1;
-            letter-spacing: 1.5px;
-        }
+
 
         &__content {
-            padding: $spacing;
+            /*padding: $spacing;*/
             box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25), 0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
             background: #fff;
             /*width: $content-width;*/
             border-radius: 0 $bdrs $bdrs 0;
+
+            .timeline__event__main__title {
+                color: $color2;
+                font-size: 1.5rem;
+                font-weight: 600;
+                background: $color1;
+                display: flex;
+                /*flex-direction: column;*/
+                justify-content: space-evenly;
+                white-space: nowrap;
+                padding: 0 $spacing;
+                border-radius: $bdrs $bdrs 0 0;
+                text-align: center;
+                padding-top: 3px;
+                padding-bottom: 3px;
+            }
+
+            .timeline__event__title {
+                font-size: 1.2rem;
+                line-height: 1.4;
+                text-transform: uppercase;
+                font-weight: 600;
+                color: $color1;
+                letter-spacing: 1.5px;
+                padding: 3px;
+                margin-left: 5px
+            }
+
+            .timeline__event__description {
+                flex-basis: 60%;
+
+                > p {
+                    margin-bottom: 0 !important;
+                }
+            }
         }
 
         .timeline__event__header {
             display: flex;
         }
-
-        &__date {
+        /*&__date {
             color: $color2;
             font-size: 1.5rem;
             font-weight: 600;
@@ -981,7 +1032,7 @@ h2 {
                     justify-content: space-around;
                 }
             }
-        }
+        }*/
 
         &__icon {
             display: flex;
@@ -1030,13 +1081,8 @@ h2 {
             }
         }
 
-        &__description {
-            flex-basis: 60%;
 
-            > p {
-                margin-bottom: 0 !important;
-            }
-        }
+
 
         &--type2 {
             &:after {
@@ -1044,6 +1090,11 @@ h2 {
             }
 
             .timeline__event__date {
+                color: $color3;
+                background: $color4;
+            }
+
+            .timeline__event__main__title {
                 color: $color3;
                 background: $color4;
             }
@@ -1083,6 +1134,11 @@ h2 {
             .timeline__event__date {
                 color: $color6;
                 background-color: $color5;
+            }
+
+            .timeline__event__main__title {
+                color: $color6;
+                background: $color5;
             }
 
             &:nth-child(2n + 1) {
@@ -1133,27 +1189,37 @@ h2 {
     .timeline__event {
         flex-direction: column;
         align-self: center;
+        border: 1px solid $color2;
+
+        &--type2 {
+            border: 1px solid $color4;
+        }
+
+        &--type3 {
+            border: 1px solid $color6;
+        }
 
         &__content {
             width: 100%;
         }
 
         &__icon {
-            border-radius: $bdrs $bdrs 0 0;
+            /*border-radius: $bdrs $bdrs 0 0;
             width: 100%;
             margin: 0;
             box-shadow: none;
             flex: 1;
             align-self: stretch;
-            height: auto;
+            height: auto;*/
+            margin: auto;
+            padding: 30px;
 
             &:before,
             &:after {
                 display: none;
             }
         }
-
-        .timeline__event__header {
+        /* .timeline__event__header {
             flex-direction: row !important;
 
             .timeline__event__date {
@@ -1187,9 +1253,8 @@ h2 {
                     }
                 }
             }
-        }
-
-        &__date {
+        }*/
+        /*&__date {
             border-radius: 0;
             padding: $spacing;
         }
@@ -1207,7 +1272,7 @@ h2 {
                 border-radius: $bdrs $bdrs 0 0;
                 margin: 0;
             }
-        }
+        }*/
     }
 }
 @media (max-width: 786px) {
