--- a/PersonalWebSite.Front/Components/Cv/CvExperienceItem.razor
+++ b/PersonalWebSite.Front/Components/Cv/CvExperienceItem.razor
@@ -24,15 +24,15 @@
 
                 </div>
             </div> *@
-            <div class="col-6 d-lg-none m-auto">
+            <div class="sub-main-title col-6 d-lg-none">
                 <div class=" timeline__event__icon">
                     <img src="@Icon" style="width: 40px" />
                 </div>
                 
             </div>
-            <div class="col-6 col-xl-4 m-auto">@Company</div>
-            <div class="col-12 col-sm-6 col-xl-4 m-auto">@Software</div>
-            <div class="col-12 col-sm-6 col-xl-4 m-auto">@Date</div>
+            <div class=" sub-main-title col-6 col-xl-4">@Company</div>
+            <div class=" sub-main-title col-12 col-sm-6 col-xl-4">@Software</div>
+            <div class="sub-main-title col-12 col-sm-6 col-xl-4">@Date</div>
         </div>
         <div class="timeline__event__title">
             @Title
