--- a/PersonalWebSite.Front/Components/Cv/CvLang.razor
+++ b/PersonalWebSite.Front/Components/Cv/CvLang.razor
@@ -1,5 +1,6 @@
-﻿<div class="cv-title title-lang">
-    <i class="fas fa-language"></i>&nbsp;Langues
+﻿@inject IStringLocalizer<CvLang> L
+<div class="cv-title title-lang">
+    <i class="fas fa-language"></i>&nbsp;@L["Lang"]
 </div>
 <div class="langue-bloc">
     <div class="country">
