--- a/PersonalWebSite.Front/Pages/PageCv.razor
+++ b/PersonalWebSite.Front/Pages/PageCv.razor
@@ -44,7 +44,7 @@
                     </div> *@
                     
                     @*<PersonalWebSite.Front.Components.Cv.CvSkills />*@
-                    <PersonalWebSite.Front.Components.Cv.CvExperience IncludeFirst="true" IncludeOthers="true" />
+                    <PersonalWebSite.Front.Components.Cv.CvExperience />
                 </div>
             </div>
         </div>
