--- a/PersonalWebSite.Front/Components/Cv/CvExperience.razor
+++ b/PersonalWebSite.Front/Components/Cv/CvExperience.razor
@@ -1,47 +1,51 @@
 ﻿@inject IStringLocalizer<CvExperience> L
 
 <div class="timeline">
-    @if (IncludeFirst)
-    {
-        <CvExperienceItem Company="Info. Service 34"
-                          Date="@(L["GeckosDate"])"
-                          Software="@(L["GeckosSoftware"])"
-                          Icon="/images/geckos.png"
-                          Title="@(L["GeckosTitle"])"
-                          Type="timeline__event--type1"
-                          Description="@L["GeckosDescription"]">
-        </CvExperienceItem>
-    }
-    @if (IncludeOthers)
-    {
-        <CvExperienceItem Company="Cteasy.com"
-                          Date="@(L["CteasyDate"])"
-                          CssClass="pagebreak"
-                          Software="@(L["CteasySoftware"])"
-                          Icon="/images/cteasy.png"
-                          Title="@(L["CteasyTitle"])"
-                          Type="timeline__event--type2"
-                          Description="@L["CteasyDescription"]">
-            <Icons>
-               
-            </Icons>
-        </CvExperienceItem>
-        <CvExperienceItem Company="C2i Solutions"
-                          Date="@(L["CteasyDate"])"
-                          Software="@(L["CteasySoftware"])"
-                          Icon="/images/c2i.png"
-                          Title="@(L["CteasyTitle"])"
-                          Type="timeline__event--type3"
-                          Description="@L["CteasyDescription"]">
-        </CvExperienceItem>
-    }
-  
-    
+    <CvExperienceItem Company="Info. Service 34"
+                      Date="@(L["GeckosDate"])"
+                      Software="@(L["GeckosSoftware"])"
+                      Icon="/images/geckos.png"
+                      Title="@(L["GeckosTitle"])"
+                      Type="timeline__event--type1"
+                      Description="@L["GeckosDescription"]">
+    </CvExperienceItem>
+    <CvExperienceItem Company="Cteasy.com"
+                      Date="@(L["CteasyDate"])"
+                      CssClass="pagebreak"
+                      Software="@(L["CteasySoftware"])"
+                      Icon="/images/cteasy.png"
+                      Title="@(L["CteasyTitle"])"
+                      Type="timeline__event--type2"
+                      Description="@L["CteasyDescription"]">
+        <Icons>
 
+        </Icons>
+    </CvExperienceItem>
+    <CvExperienceItem Company="C2i Solutions"
+                      Date="@(L["C2IDate"])"
+                      Software="@(L["C2ISoftware"])"
+                      Icon="/images/c2i.png"
+                      Title="@(L["C2ITitle"])"
+                      Type="timeline__event--type3"
+                      Description="@L["C2IDescription"]">
+    </CvExperienceItem>
+    <CvExperienceItem Company="Sopra Steria"
+                      Date="@(L["SopraDate"])"
+                      Software="@(L["SopraSoftware"])"
+                      Icon="/images/sopra.png"
+                      Title="@(L["SopraTitle"])"
+                      Type="timeline__event--type1"
+                      Description="@L["SopraDescription"]">
+    </CvExperienceItem>
+
+    <CvExperienceItem Company="Expertime"
+                      Date="@(L["ExpertimeDate"])"
+                      Software="@(L["ExpertimeSoftware"])"
+                      Icon="/images/expertime.png"
+                      Title="@(L["ExpertimeTitle"])"
+                      Type="timeline__event--type2"
+                      Description="@L["ExpertimeDescription"]">
+    </CvExperienceItem>
 </div>
-@code{
-    [Parameter]
-    public bool IncludeFirst{get;set;}
-    [Parameter]
-    public bool IncludeOthers { get; set; }
+@code {
 }
