--- a/PersonalWebSite.Front/wwwroot/css/site.scss
+++ b/PersonalWebSite.Front/wwwroot/css/site.scss
@@ -970,6 +970,11 @@ h2 {
                 text-align: center;
                 padding-top: 3px;
                 padding-bottom: 3px;
+
+                .sub-main-title{
+                    margin: auto;
+                    /*text-wrap: wrap;*/
+                }
             }
 
             .timeline__event__title {
